--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 
     <title>SPHERE Shared Education Materials</title>
 
-    <link rel="stylesheet" type="text/css" charset="utf-8" media="all" href="..\
-/../css//common.css">
-    <link rel="stylesheet" type="text/css" charset="utf-8" media="screen" href=\
-"../../css//screen.css">
+    <link rel="stylesheet" type="text/css" charset="utf-8" media="all" href="css/common.css">
+    <link rel="stylesheet" type="text/css" charset="utf-8" media="screen" href="css/screen.css">
   </head>
 
   <body dir="ltr" lang="en">
